# HybridRAG

./: .gitignore  CMakeLists.txt
app/run/: run.cpp
app/server/: openai_api.hpp  server_handler.hpp  simple_server.cpp
src/backend/opencl/: CMakeLists.txt  opencl_backend.cpp  opencl_backend.hpp  opencl_backend_helpers.hpp  opencl_buffer.cpp  opencl_buffer.hpp  opencl_context.cpp  opencl_context.hpp  opencl_embedded_kernels.hpp  opencl_fallback_ops.cpp  opencl_kernel_manager.cpp  opencl_kernel_manager.hpp  opencl_kernels_ops.cpp  opencl_kv_cache.hpp  opencl_kv_cache_ops.cpp  opencl_memory.cpp  opencl_memory.hpp  opencl_tensor_ops.cpp
src/backend/opencl/kernels/: get_mask.cl  get_rows.cl  mul_mat_f16_f32.cl  mul_mat_q4_0_f32_simple.cl  mul_mat_q8_0_f32_simple.cl  mul_mm_f16_f32_l4_lm.cl  mul_mm_f32_f32_l4_lm.cl  mul_mv_q4_0_f32_8x_flat.cl  mul_mv_q8_0_f32_flat.cl  q8_align_x_f32.cl  rms_norm.cl  softmax_f32.cl
src/core/: config.cpp  config.hpp
src/executor/: executor.cpp
src/graph/: graph.cpp
src/model/: CMakeLists.txt  model.hpp
src/model/module/: norm_attention.cpp
src/model/qwen3/: qwen3_model.cpp  qwen3_model.hpp
tests/: CMakeLists.txt  layer_diff_test.cpp  logits_cmp.cpp  matmul_diff_test.cpp  opencl_test.cpp  softmax_ext_test.cpp  tokens_cmp.cpp
tools/: embed_opencl_kernel.py  gguf_export.py
tools/backend_eval/: README_backend_eval.md  backend_eval.py  prompts_eval.txt
tools/end_to_end/: compile.sh  powerserve.py  powerserve.sh
tools/gguf_config_to_json/: main.cpp
tools/qnn_converter/: converter.py  export_to_onnx.py  llama_model.py  model_params.py
